examples/test/testpolicy18967.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18967
  namespace: namespace267
spec:
  podSelector:
    matchLabels:
      key38: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value10
          key22: value13
          key28: value31
      podSelector:
        matchLabels:
          key31: value48
